# albumartwarp

./: .env.example  .gitignore  README.md  mise.toml
backend/: pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/api/routes/: audio.py  search.py
backend/app/models/: __init__.py  audio.py
backend/app/services/: __init__.py  audio_processor.py  lastfm_service.py
backend/tests/: conftest.py  test_audio_processor.py  test_routes.py
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  index.css  main.jsx
frontend/src/components/: Controls.css  Controls.jsx  FileUpload.css  FileUpload.jsx  NowPlaying.css  NowPlaying.jsx  SearchBar.css  SearchBar.jsx  Visualizer.css  Visualizer.jsx
frontend/src/hooks/: useAudioAnalyzer.js  useVisualization.js
frontend/src/services/: api.js  colorExtractor.js
frontend/src/utils/: audioUtils.js  visualUtils.js
frontend/tests/: setup.js
frontend/tests/components/: Visualizer.test.jsx
frontend/tests/services/: api.test.js
